--- a/careers.html
+++ b/careers.html
@@ -879,7 +879,7 @@
     #site-root {
         margin: 0 auto;
         min-height: 100%;
-        position: relative;
+        /*position: relative;*/
         top: var(--wix-ads-height)
     }
 
@@ -10715,7 +10715,7 @@
     <div id="main_MF" class="main_MF">
         <div id="SCROLL_TO_TOP" class="Vd6aQZ ignore-focus SCROLL_TO_TOP" tabindex="-1" role="region"
              aria-label="top of page"><span class="mHZSwn">top of page</span></div>
-        <div id="WIX_ADS" class="WIX_ADS NI6sSq IphKed DV9Swr"><a data-testid="linkElement" href="//wix.com/studio"
+        <div id="WIX_ADS" style="display:none;" class="WIX_ADS NI6sSq IphKed DV9Swr"><a data-testid="linkElement" href="//wix.com/studio"
                                                                   target="_blank" rel="nofollow"
                                                                   class="IoI91y BuenfI"><span class="ynPdjt sdxlGI">Made with <svg
                 class="H88SbS" aria-label="Wix Studio" width="129" height="17" viewbox="0 0 129 17" fill="black"
@@ -11162,7 +11162,7 @@
                                                                                 class="mb-3.5"><label
                                                                                 class="font-semibold">Telephone</label><div><a
                                                                                 class="cib-link" target="_blank"
-                                                                                href="tel:+070 8098 4375"><span>+070 8098 4375</span></a></div><div></div></div><div
+                                                                                href="tel:+070 8919 8329"><span>+070 8919 8329</span></a></div><div></div></div><div
                                                                                 class="mb-3.5"><div></div></div></div></div></span>
                                                                                                 </li>
                                                                                                 <li class="overflow-hidden border-l-4 border-divider-default dark:border-dark-divider-default" style="display: none;">
