--- a/index.html
+++ b/index.html
@@ -741,7 +741,7 @@
     #site-root {
         margin: 0 auto;
         min-height: 100%;
-        position: relative;
+       /* position: relative;*/
         top: var(--wix-ads-height)
     }
 
@@ -11132,7 +11132,7 @@
     <div id="main_MF" class="main_MF">
         <div id="SCROLL_TO_TOP" class="Vd6aQZ ignore-focus SCROLL_TO_TOP" tabindex="-1" role="region"
              aria-label="top of page"><span class="mHZSwn">top of page</span></div>
-        <div id="WIX_ADS" class="WIX_ADS NI6sSq IphKed DV9Swr"><a data-testid="linkElement" href="//wix.com/studio"
+        <div id="WIX_ADS" style="display:none;" class="WIX_ADS NI6sSq IphKed DV9Swr"><a data-testid="linkElement" href="//wix.com/studio"
                                                                   target="_blank" rel="nofollow"
                                                                   class="IoI91y BuenfI"><span class="ynPdjt sdxlGI">Made with <svg
                 class="H88SbS" aria-label="Wix Studio" width="129" height="17" viewbox="0 0 129 17" fill="black"
