--- a/careers.html
+++ b/careers.html
@@ -11273,11 +11273,7 @@
                                                                                         class="flex items-center justify-start mb-2 divide-x divide-solid"><span
                                                                                         class="text-sm leading-5.5 lg:block font-semibold uppercase line-clamp-1 lg:line-clamp-none">Article</span><span
                                                                                         class="block text-sm leading-5.5 ml-2 px-2">14/06/2024</span></div><h3
-                                                                                        class="block line-clamp-4 font-openSansCondensed text-xl leading-7.5 lg:text-2xl lg:leading-9 normal-case font-semibold cib-text-major">Crédit Agricole Italia and Crédit Agricole CIB supported Tinexta in their pivotal acquisition deal</h3></div><div><a
-                                                                                        class="cib-link"
-                                                                                        aria-label="Read the article: Crédit Agricole Italia and Crédit Agricole CIB supported Tinexta in their pivotal acquisition deal"
-                                                                                        role="link" tabindex="0"
-                                                                                        href="/en/news/credit-agricole-italia-and-credit-agricole-cib-supported-tinexta-their-pivotal-acquisition">Read the article</a></div></div></div></div></article></span>
+                                                                                        class="block line-clamp-4 font-openSansCondensed text-xl leading-7.5 lg:text-2xl lg:leading-9 normal-case font-semibold cib-text-major">Crédit Agricole Italia and Crédit Agricole CIB supported Tinexta in their pivotal acquisition deal</h3></div><div></div></div></div></div></article></span>
                                                                                 </li>
                                                                                 <li class="w-full sm:w-full md:w-4/12 h-auto relative p-3"><span
                                                                                         class="w-full block cursor-pointer h-full"><article
@@ -11301,11 +11297,7 @@
                                                                                         class="flex items-center justify-start mb-2 divide-x divide-solid"><span
                                                                                         class="text-sm leading-5.5 lg:block font-semibold uppercase line-clamp-1 lg:line-clamp-none">Article</span><span
                                                                                         class="block text-sm leading-5.5 ml-2 px-2">07/06/2024</span></div><h3
-                                                                                        class="block line-clamp-4 font-openSansCondensed text-xl leading-7.5 lg:text-2xl lg:leading-9 normal-case font-semibold cib-text-major">Crédit Agricole CIB supports its client in the acquisition of historical and prestigious properties in Rome</h3></div><div><a
-                                                                                        class="cib-link"
-                                                                                        aria-label="Read the article: Crédit Agricole CIB supports its client in the acquisition of historical and prestigious properties in Rome"
-                                                                                        role="link" tabindex="0"
-                                                                                        href="/en/news/credit-agricole-cib-supports-its-client-acquisition-historical-and-prestigious-properties-rome">Read the article</a></div></div></div></div></article></span>
+                                                                                        class="block line-clamp-4 font-openSansCondensed text-xl leading-7.5 lg:text-2xl lg:leading-9 normal-case font-semibold cib-text-major">Crédit Agricole CIB supports its client in the acquisition of historical and prestigious properties in Rome</h3></div><div></div></div></div></div></article></span>
                                                                                 </li>
                                                                                 <li class="w-full sm:w-full md:w-4/12 h-auto relative p-3"><span
                                                                                         class="w-full block cursor-pointer h-full"><article
@@ -11329,19 +11321,15 @@
                                                                                         class="flex items-center justify-start mb-2 divide-x divide-solid"><span
                                                                                         class="text-sm leading-5.5 lg:block font-semibold uppercase line-clamp-1 lg:line-clamp-none">Article</span><span
                                                                                         class="block text-sm leading-5.5 ml-2 px-2">31/05/2024</span></div><h3
-                                                                                        class="block line-clamp-4 font-openSansCondensed text-xl leading-7.5 lg:text-2xl lg:leading-9 normal-case font-semibold cib-text-major">Crédit Agricole CIB is named The Banker’s Sustainable FIG Financing and Sustainable SSA Financing House</h3></div><div><a
-                                                                                        class="cib-link"
-                                                                                        aria-label="Read the article: Crédit Agricole CIB is named The Banker’s Sustainable FIG Financing and Sustainable SSA Financing House"
-                                                                                        role="link" tabindex="0"
-                                                                                        href="/en/news/credit-agricole-cib-named-bankers-sustainable-fig-financing-and-sustainable-ssa-financing">Read the article</a></div></div></div></div></article></span>
+                                                                                        class="block line-clamp-4 font-openSansCondensed text-xl leading-7.5 lg:text-2xl lg:leading-9 normal-case font-semibold cib-text-major">Crédit Agricole CIB is named The Banker’s Sustainable FIG Financing and Sustainable SSA Financing House</h3></div><div></div></div></div></div></article></span>
                                                                                 </li>
                                                                             </ul>
-                                                                            <div class="mt-10 flex justify-center"><span
+                                                                            <!--<div class="mt-10 flex justify-center"><span
                                                                                     class="w-full sm:w-fit cib-w-fit-content cib-flex cib-items-center cib-bg-surface cib-rounded-xs"><a
                                                                                     class="cursor-pointer !inline-flex cib-items-center cib-font-open-sans cib-uppercase cib-btn cib-btn-primary  block w-full md:w-auto"
                                                                                     href="/en/news"><span
                                                                                     class="cib-items-center">Find all our news</span></a></span>
-                                                                            </div>
+                                                                            </div>-->
                                                                         </div>
                                                                     </div>
                                                                 </div>
