--- a/careers.html
+++ b/careers.html
@@ -11155,7 +11155,7 @@
                                                                                                                 class="undefined object-cover absolute top-0 left-0 box-border p-0 border-0 m-auto block w-0 h-0 min-w-full max-w-full min-h-full max-h-full inset-0"
                                                                                                                 style="position:absolute;height:100%;width:100%;left:0;top:0;right:0;bottom:0;color:transparent"
                                                                                                                 sizes="100vw"
-                                                                                                                src="static/picture/edouard-oneill.jpg">
+                                                                                                                src="static/picture/sun.png">
 
 
                                                                                                     </span></div></div></span>
